--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,23 +1,24 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
+  "private": true,
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.20.0",
   "dependencies": {
-    "fastify": "^5.6.1"
+    "@dashanddots/shared": "workspace:*",
+    "@fastify/cors": "^10.0.1",
+    "fastify": "^5.0.0",
+    "ioredis": "^5.4.2",
+    "nanoid": "^5.0.7",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "@types/node": "^20.19.24",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "@types/node": "^22.7.4",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3"
   }
 }
