--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,68 @@
 version: "3.9"
-services:
-  postgres:
-    image: postgres:16-alpine
-    container_name: dd-postgres
-    environment:
-      POSTGRES_USER: dd_user
-      POSTGRES_PASSWORD: dd_pass
-      POSTGRES_DB: dashanddots
-    ports:
-      - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U dd_user -d dashanddots"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
 
+services:
   redis:
     image: redis:7-alpine
-    container_name: dd-redis
+    restart: unless-stopped
+
+  api:
+    build:
+      context: .
+      dockerfile: apps/server/Dockerfile
+    env_file:
+      - ./.env.production
+    environment:
+      REDIS_URL: ${REDIS_URL}
+      API_PORT: ${API_PORT}
+      WS_PORT: ${WS_PORT}
+      CORS_ORIGIN: ${CORS_ORIGIN}
+    depends_on:
+      - redis
+    restart: unless-stopped
+
+  ws:
+    # Same image as api (your server hosts both HTTP + WS in index.ts)
+    # If your index creates both servers already, you can omit this service
+    # and just use one "api" service. If you split WS into its own port inside
+    # the same process, you can still keep a single container.
+    # For clarity, we keep proxy target named "ws" in Caddy to port 4001.
+    image: ${COMPOSE_PROJECT_NAME:-gamehub}_api
+    depends_on:
+      - api
+    restart: unless-stopped
+
+  web:
+    build:
+      context: .
+      dockerfile: apps/web/Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+        NEXT_PUBLIC_WS_URL: ${NEXT_PUBLIC_WS_URL}
+    env_file:
+      - ./.env.production
+    depends_on:
+      - api
+      - ws
+    restart: unless-stopped
+
+  caddy:
+    image: caddy:2
     ports:
-      - "6379:6379"
-    command: ["redis-server", "--save", "", "--appendonly", "no"]
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
+      - "80:80"
+      - "443:443"
+    environment:
+      CADDY_DOMAIN: ${CADDY_DOMAIN}
+      EMAIL: ${EMAIL}
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy_data:/data
+      - caddy_config:/config
+    depends_on:
+      - web
+      - api
+      - ws
+    restart: unless-stopped
 
 volumes:
-  pgdata:
+  caddy_data:
+  caddy_config:
