--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "printWidth": 100,
-  "singleQuote": false,
   "semi": true,
-  "trailingComma": "all"
+  "singleQuote": false,
+  "printWidth": 100,
+  "trailingComma": "es5",
+  "tabWidth": 2
 }
