--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "license": "ISC",
   "packageManager": "pnpm@10.20.0",
   "devDependencies": {
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "prettier": "^3.6.2",
-    "turbo": "^2.6.0"
+    "turbo": "^2.6.0",
+    "typescript": "^5.9.3"
   }
 }
